# specialist

./: .gitignore  pyproject.toml  setup.py  specialist.py  test_specialist.py
.github/workflows/: ci.yml
examples/: input-1.py  input-2.py  input-3.py  input-4.py
specialist/: __init__.py  __main__.py  core.py  instructions.py  stats.py  utils.py  writers.py
specialist/_cli/: __init__.py  _mutex.py
specialist/watch/: __init__.py  monitor.py  payload.py  socket.py
