[tool.poetry]
name = "specialist"
version = "0.0.0"
description = "Visualize CPython 3.11's specializing, adaptive interpreter."
authors = ["Brandt Bucher <brandt@python.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
pytest = {version = "7.1.2", optional = true}
click = "^8.1.3"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
setuptools = "62.3.2"
wheel = "0.37.1"

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.scripts]
specialist = "specialist._cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
